[build-system]
requires = ["setuptools>=42", "numpy", "setuptools_scm>=8.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "graphite_maps/version.py"
version_scheme = "only-version"

[project]
name = "graphite-maps"
description = "Ensemble based data assimilation learning graph informed triangular ensemble-to-posterior transport maps from data"
authors = [{name = "Berent Lunde"}]
requires-python = ">=3.10, <3.13"
dependencies = [
    "matplotlib",
    "scipy",
    "scikit-learn",
    "networkx",
    "tqdm",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]
include = ["graphite_maps*"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "scikit-sparse" # Must be installed with linking towards libsuitesparse
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
files = "graphite_maps"
python_version = 3.10
show_error_codes = true
pretty = true
ignore_missing_imports = true

[tool.ruff]
src = ["graphite_maps"]
line-length = 88
exclude = ["docs"]

[tool.ruff.lint]
select = [
    "W",     # pycodestyle
    "I",     # isort
    "B",     # flake-8-bugbear
    "SIM",   # flake-8-simplify
    "F",     # pyflakes
    "PL",    # pylint
    "NPY",   # numpy specific rules
    "C4",    # flake8-comprehensions
    "ASYNC", # flake8-async
    "RUF",   # ruff specific rules
    "UP",    # pyupgrade
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
]

ignore = [
    "PLW2901", # redefined-loop-name
    "PLR2004", # magic-value-comparison
    "PLR0915", # too-many-statements
    "PLR0912", # too-many-branches
    "PLR0911", # too-many-return-statements
    "PLC2701", # import-private-name
    "PLR0914", # too-many-locals
    "PLR6301", # no-self-use
    "PLW1641", # eq-without-hash
    "PLR0904", # too-many-public-methods
    "PLR1702", # too-many-nested-blocks
]

[tool.ruff.lint.pylint]
max-args = 20
