[build-system]
requires = ["setuptools>=42", "numpy", "setuptools_scm>=8.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "graphite_maps/version.py"
version_scheme = "only-version"

[project]
name = "graphite-maps"
description = "Ensemble based data assimilation learning graph informed triangular ensemble-to-posterior transport maps from data"
authors = [{name = "Berent Lunde"}]
requires-python = ">=3.10, <3.15"
dependencies = [
    "matplotlib",
    "scipy",
    "scikit-learn",
    "networkx",
    "tqdm",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]
include = ["graphite_maps*"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "scikit-sparse" # Must be installed with linking towards libsuitesparse
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
files = "graphite_maps"
python_version = 3.10
show_error_codes = true
pretty = true
ignore_missing_imports = true

[tool.ruff]
src = ["graphite_maps"]
line-length = 88
exclude = ["docs"]

[tool.ruff.lint]
select = [
    "ASYNC", # flake8-async
    "B",     # flake-8-bugbear
    "C4",    # flake8-comprehensions
    "F",     # pyflakes
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "NPY",   # numpy specific rules
    "PIE",   # flake8-pie
    "PL",    # pylint
    "RUF",   # ruff specific rules
    "SIM",   # flake-8-simplify
    "UP",    # pyupgrade
    "W",     # pycodestyle
]

ignore = [
    "PLC2701", # import-private-name
    "PLR0904", # too-many-public-methods
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0914", # too-many-locals
    "PLR0915", # too-many-statements
    "PLR1702", # too-many-nested-blocks
    "PLR2004", # magic-value-comparison
    "PLR6301", # no-self-use
    "PLW1641", # eq-without-hash
    "PLW2901", # redefined-loop-name
]

[tool.ruff.lint.pylint]
max-args = 20
